--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -26,14 +26,13 @@ p {
   @apply text-base;
 }
 
-
 .glass-container {
   position: relative;
 }
 
 .glass-container::before {
   @apply absolute -inset-[10px] -z-10 rounded-xl border border-slate-100/20 bg-slate-200/10 backdrop-blur-md;
-  content: "";
+  content: '';
 }
 
 .signal-line {
